@@ -1,4 +1,8 @@
   15 Jul 2014; Michael Weber <xmw@gentoo.org>
+  files/atlas-0.4_p20140519-fg3.patch:
+  Include complete patch.
+
+  15 Jul 2014; Michael Weber <xmw@gentoo.org>
   +files/atlas-0.4_p20140519-fg3.patch, atlas-0.4_p20140519.ebuild:
   Add patches for version 3 scenery (version 1000)
 
